fix picker item vertical align

--- a/mdui/src/components/input/picker.less
+++ b/mdui/src/components/input/picker.less
@@ -105,7 +105,9 @@
 /* 内容项 */
 .mdui-picker-item {
   position: relative;
+  display: flex;
   flex-grow: 1;
+  align-items: center;
   height: 48px;
   margin: 2px;
   padding: 0 16px;
